@@ -7,6 +7,10 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 
 == Unreleased
 
+=== Added
+
+* add :wrap option to control line wrapping behavior (:ventilate, :none, and :preserve) (#11)
+
 === Changed
 
 * add replace_line method to Writer
@@ -15,7 +19,7 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 
 === Added
 
-* added options and usage to CLI (#2)
+* add options and usage to CLI (#2)
 * ensure directory of output file exists
 * add option to enable automatic generation of IDs for section titles
 
